--- a/src/html/css/estilos.css
+++ b/src/html/css/estilos.css
@@ -45,6 +45,10 @@ label {
     margin-bottom: 5px;
 }
 
+.label-custom-width {
+    width: 100px;
+}
+
 input[type="text"], input[type="tel"], input[type="email"] {
     height: 1.8em;
     width: 50%;
